
Revision history for Net::DNS                                     -*-text-*-
=============================
*** 0.59_1 UNRELEASED

Fix rt 22334
    Fixed "perl Makefile.PL --xs" behavior, patch by Tamas Palfalvi

Fix rt 21752 and 24042
    Applied the patch supplied by Alexandr Ciornii to be able
    to compile on ActiveState perl .
    Slight modifications based on comments by nimnul


Fix rt 23961
    Randomized the ID on the queries. Thanks to "hjp" for reporting and
    sugesting a fix.

    The randomization of the src port is supposed to be handled by the
    setting the source port to "0" (default). Overriding the default
    or using persistent sockets may be problematic.

    Also see:
    http://www.potaroo.net/ietf/idref/draft-hubert-dns-anti-spoofing/

Fix 
    Minor compile time warnings for netdns.c on Fedora Core.




*** 0.59 September 18, 2006



Fix rt.cpan.org 20836, 20857, 20994, and 21402

    These tickets all revolved around proper reverse mapping of IPv6
    addresses.

    Acknowledgements to Dick Franks who has provided elegant solutions and
    cleaned a bit of code.

    Note that directly calling Question->new() withouth arguments will
    cause the qclass,qtype to be IN, A instead of ANY, ANY.

    Net::DNS::Resolver's search() method would always gracefully
    interpret a qname in the form of an IPv4 address. It would go out
    and do a PTR query in the reverse address tree. This behavior has
    also been applied to IPv6 addresses in their many shapes and
    forms. 

    This change did two things, 1) root zone not implicitly added to
    search list when looking up short name, 2) default domain appended
    to short name if DEFNAMES and not DNSRCH.


Fix rt.cpan.org 18113

   Minor error due to unapplied part of patch fixed.

Feature: Experimental NSEC3 hooks. 

   Added hook for future support of (experimental) NSEC3 suppport
   (NSEC3 having an experimental type code).




*** 0.58 July 4, 2006
